[fix]: Adjusting spacing

--- a/src/components/HomeCertificacaoEm4Semanas/index.css
+++ b/src/components/HomeCertificacaoEm4Semanas/index.css
@@ -50,4 +50,9 @@
         margin-left: 0;
         margin-top: 50px;
     }
+
+    #hce4s-button {
+        margin-bottom: 40px;
+        margin-top: 20px;
+    }
 }
